# mapGroupCounting

./: CMakeLists.txt  README.md
source/group_counter/: GroupCounter.h
source/main/: main.cpp
source/types/: group_counter_types.h
